<resources>
    <string name="app_name">StudyBuddy</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="interests">Interests</string>
    <string name="log_out">Log out</string>
    <string name="password_new">New password</string>
    <string name="sign_up">Sign up</string>
    <string name="login_to_study_buddy">Login to Study Buddy</string>
    <string name="change_password">Change Password</string>
    <string name="title_activity_interest">InterestActivity</string>
    <string name="btn_change_interest">Change Interest</string>
    <string name="btn_upload_image">Upload Image</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="save">Save</string>
    <string name="change_interest">Change Interest</string>
    <string name="profile_photo">Profile photo</string>
    <string name="search_books">Search books…</string>
    <string name="search_users">Search users…</string>
    <string name="search">Search</string>
    <string name="logo">Logo</string>
    <string name="reset_password">Reset Password:</string>
    <string name="enter_message">Enter Message</string>
    <string name="send">Send</string>
    <string name="create_event">Create Event</string>
    <string name="search_user">Search User</string>
    <string name="register_new_account">Register new account</string>
    <string name="submit">Submit</string>
    <string name="user_icon">User Icon</string>
    <string name="share_image">Share Image</string>
    <string name="share_video">Share Video</string>
    <string name="share_file">Share File</string>
    <string name="enter_event_name">Enter event name</string>
    <string name="enter_description">Enter description</string>
    <string name="enter_group_name">Enter group name</string>
    <string name="event_date">Event Date</string>
    <string name="event_time">Event Time</string>
    <string name="event_name">Event name</string>
    <string name="event_description">Event description</string>
    <string name="group_name">Group name</string>
    <string name="group">Group:</string>
    <string name="pictures">Photo</string>
    <string name="videos">VIDEO</string>
    <string name="files">FILE</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>