<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/navTop"
        android:name="edu.iss.nus.group1.studybuddy.NavMenuFragment"
        android:layout_width="0dp"
        android:layout_height="60dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/profile_bk"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/navTop">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imgProfilePhoto"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/profile_photo"
            android:src="@drawable/no_img_avatar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_gchat_date_other"
            app:shapeAppearanceOverlay="@style/roundedCorners" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:gravity="center"
            android:orientation="horizontal">

        </LinearLayout>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <RelativeLayout style="@style/profileDetailsLayout">

                <ImageView
                    android:id="@+id/nameImageView"
                    style="@style/profileDetailsImage"
                    android:src="@drawable/account" />

                <TextView
                    android:id="@+id/nameTextView"
                    style="@style/profileDetailsTextMain"
                    android:layout_toRightOf="@id/nameImageView"
                    android:text="@string/name"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/txtProfileName"
                    style="@style/profileDetailsMiniText"
                    android:layout_toRightOf="@id/nameImageView" />

            </RelativeLayout>

            <View style="@style/proifleDetailsView" />

            <RelativeLayout style="@style/profileDetailsLayout">

                <ImageView
                    android:id="@+id/userNameImageView"
                    style="@style/profileDetailsImage"
                    android:src="@drawable/face" />

                <TextView
                    style="@style/profileDetailsTextMain"
                    android:layout_toRightOf="@id/userNameImageView"
                    android:text="@string/username" />

                <TextView
                    android:id="@+id/txtProfileUsername"
                    style="@style/profileDetailsMiniText"
                    android:layout_toRightOf="@id/userNameImageView" />

            </RelativeLayout>

            <View style="@style/proifleDetailsView" />

            <RelativeLayout style="@style/profileDetailsLayout">

                <ImageView
                    android:id="@+id/emailImageView"
                    style="@style/profileDetailsImage"
                    android:src="@drawable/email" />

                <TextView
                    style="@style/profileDetailsTextMain"
                    android:layout_toRightOf="@id/emailImageView"
                    android:text="@string/email" />

                <TextView
                    android:id="@+id/txtProfileEmail"
                    style="@style/profileDetailsMiniText"
                    android:layout_toRightOf="@id/emailImageView" />

            </RelativeLayout>

            <View style="@style/proifleDetailsView" />

            <RelativeLayout style="@style/profileDetailsLayout">

                <ImageView
                    android:id="@+id/interestImageView"
                    style="@style/profileDetailsImage"
                    android:src="@drawable/favorite" />

                <TextView
                    style="@style/profileDetailsTextMain"
                    android:layout_toRightOf="@id/interestImageView"
                    android:text="@string/interests" />

                <TextView
                    android:id="@+id/txtProfileInterests"
                    style="@style/profileDetailsMiniText"
                    android:layout_marginTop="20dp"
                    android:layout_toRightOf="@id/interestImageView" />

            </RelativeLayout>

            <View style="@style/proifleDetailsView" />

            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:layout_gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnProfileChangeInterest"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_change_interest" />

                <Button
                    android:id="@+id/btnProfileChangePass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/change_password" />

                <Button
                    android:id="@+id/btnProfileLogout"
                    app:backgroundTint="@color/red"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/log_out" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>