<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:orientation="horizontal"
    android:padding="20dp">

    <!--    <ImageView-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="300dp"-->
    <!--        android:layout_marginBottom="50dp"-->
    <!--        android:src="@drawable/logo" />-->

    <!--    <LinearLayout-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:orientation="horizontal">-->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnChatPopupImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/chat_popup"
        android:drawableTop="@drawable/chat_popup1"
        android:paddingBottom="8dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:paddingTop="8dp"
        android:text="@string/pictures"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="14sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnChatPopupVideo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/chat_popup"
        android:drawableTop="@drawable/chat_popup2"
        android:paddingBottom="8dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:paddingTop="8dp"
        android:text="@string/videos"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="14sp" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnChatPopupFile"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/chat_popup"
        android:drawableTop="@drawable/chat_popup3"
        android:paddingLeft="25dp"
        android:paddingTop="8dp"
        android:paddingRight="25dp"
        android:paddingBottom="8dp"
        android:text="@string/files"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="14sp" />
</LinearLayout>

    <!--</LinearLayout>-->

